--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
    <properties>
       <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-      <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
+      <version.picketlink>2.6.0.CR4</version.picketlink>
       <version.furnace>2.6.1-SNAPSHOT</version.furnace>
       <version.forge.addons>2.6.1-SNAPSHOT</version.forge.addons>
       <jboss.logging.version>3.1.1.GA</jboss.logging.version>
