--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,9 +26,9 @@
 			<web-resource-name>JaxRsActivator</web-resource-name>
 			<url-pattern>/*</url-pattern>
 		</web-resource-collection>
-		<user-data-constraint>
+		<!-- <user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
-		</user-data-constraint>
+		</user-data-constraint> -->
 	</security-constraint>
 
 </web-app>
