--- a/pom.xml
+++ b/pom.xml
@@ -271,10 +271,10 @@
                   </goals>
                   <inherited>false</inherited>
                   <configuration>
-                     <addonRepository>${basedir}/src/main/webapp/WEB-INF/addon-repository</addonRepository>
+                     <addonRepository>${project.build.directory}/${project.artifactId}/WEB-INF/addon-repository</addonRepository>
                      <addonIds>
                         <addonId>org.jboss.forge.addon:core,${version.forge.addons}</addonId>
-                        <addonId>org.jboss.forge.addon:ui-example,${version.forge.addons}</addonId>
+                        <!--addonId>org.jboss.forge.addon:ui-example,${version.forge.addons}</addonId-->
                      </addonIds>
                   </configuration>
                </execution>
