--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
       <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
       <version.picketlink>2.7.0-SNAPSHOT</version.picketlink>
-      <version.furnace>2.6.1-SNAPSHOT</version.furnace>
-      <version.forge.addons>2.6.1-SNAPSHOT</version.forge.addons>
+      <version.furnace>2.7.0.Final</version.furnace>
+      <version.forge.addons>2.7.0.Final</version.forge.addons>
       <jboss.logging.version>3.1.1.GA</jboss.logging.version>
       <deltaspike.version>1.0.0</deltaspike.version>
    </properties>
