--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,13 @@
         <version>${deltaspike.version}</version>
       </dependency>
       
+      <!-- CORS Filter (to enable CORS for REST endpoints) -->
+      
+      <dependency>
+        <groupId>com.thetransactioncompany</groupId>
+        <artifactId>cors-filter</artifactId>
+        <version>1.9</version>
+      </dependency>
       
       <!-- Furnace -->
       
