--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
    <properties>
       <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-      <version.picketlink>2.7.0-SNAPSHOT</version.picketlink>
-      <version.furnace>2.7.0.Final</version.furnace>
-      <version.forge.addons>2.7.0.Final</version.forge.addons>
+      <version.picketlink>2.7.0.CR1-20140924</version.picketlink>
+      <version.furnace>2.10.1.Final</version.furnace>
+      <version.forge.addons>2.10.1.Final</version.forge.addons>
       <jboss.logging.version>3.1.1.GA</jboss.logging.version>
       <version.deltaspike>1.0.0</version.deltaspike>
       <version.jackson>2.4.2</version.jackson>
