--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,8 @@
       <version.deltaspike>1.0.0</version.deltaspike>
       <version.jackson>2.4.2</version.jackson>
       <version.guava>18.0</version.guava>
-      <version.httpclient>4.4-beta1</version.httpclient>
+      <!--version.httpclient>4.4-beta1</version.httpclient-->
+      <version.google.httpclient>1.18.0-rc</version.google.httpclient>
    </properties>
    
    <repositories>
@@ -215,10 +216,24 @@
       
       <!-- Apache HTTPClient -->
 
-      <dependency>
+      <!--dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>${version.httpclient}</version>
+      </dependency-->
+
+      <!-- Google HTTP Client -->
+
+      <dependency>
+         <groupId>com.google.http-client</groupId>
+         <artifactId>google-http-client</artifactId>
+         <version>${version.google.httpclient}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>com.google.http-client</groupId>
+         <artifactId>google-http-client-jackson2</artifactId>
+         <version>${version.google.httpclient}</version>
       </dependency>
 
       <!-- Forge APIs -->
