--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,11 @@
          <scope>provided</scope>
       </dependency>
       
-      <dependency>
+      <!--dependency>
          <groupId>org.jboss.spec.javax.transaction</groupId>
          <artifactId>jboss-transaction-api_1.1_spec</artifactId>
          <scope>provided</scope>
-      </dependency>
+      </dependency-->
       
       <dependency>
         <groupId>org.jboss.logging</groupId>
