--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       </license>
    </licenses>
    <properties>
-      <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
+      <version.xwidgets>0.1.Alpha2</version.xwidgets>
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
       <version.picketlink>2.7.0.CR2</version.picketlink>
       <version.furnace>2.12.2.Final</version.furnace>
