--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
       </license>
    </licenses>
    <properties>
-      <version.xwidgets>0.1.Alpha2</version.xwidgets>
+      <version.xwidgets>0.1-SNAPSHOT</version.xwidgets>
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-      <version.picketlink>2.7.0.CR2</version.picketlink>
+      <version.picketlink>2.7.0-SNAPSHOT</version.picketlink>
       <version.furnace>2.12.2.Final</version.furnace>
       <version.forge.addons>2.12.2.Final</version.forge.addons>
       <jboss.logging.version>3.1.1.GA</jboss.logging.version>
@@ -169,6 +169,8 @@
          <artifactId>javax.ws.rs-api</artifactId>
          <scope>provided</scope>
       </dependency>
+      
+      <!-- DeltaSpike -->
       
       <dependency>
         <groupId>org.apache.deltaspike.core</groupId>
